2004-09-23  MenTaLguY <mental@rydia.net>

	* src/message-stack.h, src/message-stack.cpp:

	  return id of flashed messages so they are cancellable

	* src/message-context.h, src/message-context.cpp:

	  message context flashes now supercede one another, as regular
	  messages do (they do not supercede regular messages though)

	* src/interface.cpp, src/layer-fns.cpp, src/layer-fns.h, src/verbs.cpp:

	  initial stab at layers menu; not everything works the way it should
	  quite yet

	* src/message-context.h, src/message-context.cpp: 

	  added flash methods to Inkscape::MessageContext

	* src/gc-core.h, src/display/nr-arena-glyphs.cpp, src/display/nr-arena-group.cpp,
	  src/display/nr-arena-item.cpp, src/display/nr-arena-item.h,
	  src/display/nr-arena-shape.cpp, src/libnr/nr-object.cpp, src/libnr/nr-object.h,

	  eliminate more sources of leaks; managed objects shouldn't use refcounts
	  among themselves

	* src/xml/repr.cpp: don't nuke log pointer

2004-09-21  MenTaLguY <mental@rydia.net>

	* src/gc-finalized.h: fix for stupid bug preventing finalizable objects
	  from being collected

	* src/Makefile_insert, src/gc.cpp, src/gc-core.h:
	  move Inkscape::GC::init out-of-line, and funnel GC warnings through
	  glib

2004-09-21  Peter Moulder  <pmoulder@river>

	* src/sp-marker.h, src/sp-marker.cpp (sp_marker_show_instance):
	  Change to using NR::Matrix instead of NRMatrix.  Update caller.

	* src/sp-gradient.cpp (sp_gradient_get_g2d_matrix,
	  sp_gradient_get_gs2d_matrix, sp_gradient_set_gs2d_matrix):
	  New NR::Matrix/NR::Rect versions of existing functions.

	* src/libnr/nr-matrix-translate-ops.h (operator/): New function.

	* src/libnr/nr-matrix-scale-ops.cpp: New file.
	* src/libnr/nr-matrix-scale-ops.h (operator/(Matrix,scale)):
	  New function.

2004-09-20  Peter Moulder  <pmoulder@bowman.csse.monash.edu.au>

	* src/Makefile.am (EXTRA_DIST), Makefile_insert
	  dialogs/Makefile_insert extension/implementation/Makefile_insert